// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardCheckbox is checked when title is included in the query param 1`] = `
<div
  className="pgn__form-radio catalog-selection-card"
>
  <input
    aria-describedby="form-field4-6"
    checked={true}
    className="pgn__form-radio-input"
    id="form-field4"
    onChange={[Function]}
    type="radio"
  />
  <div>
    <label
      className="pgn__form-label"
      htmlFor="form-field4"
    >
      foo
    </label>
    <div
      className="pgn__form-control-description pgn__form-text pgn__form-text-default"
      id="form-field4-6"
    >
      baz
    </div>
  </div>
</div>
`;

exports[`CardCheckbox renders a checkbox and label 1`] = `
<div
  className="pgn__form-radio catalog-selection-card"
>
  <input
    checked={false}
    className="pgn__form-radio-input"
    id="form-field1"
    onChange={[Function]}
    type="radio"
  />
  <div>
    <label
      className="pgn__form-label"
      htmlFor="form-field1"
    >
      foo
    </label>
    <div
      className="pgn__form-control-description pgn__form-text pgn__form-text-default"
    >
      baz
    </div>
  </div>
</div>
`;
